tests/error/extern.c
// fail "Expected a type."
extern 
